--- a/homeworks/hw3/style.css
+++ b/homeworks/hw3/style.css
@@ -21,6 +21,20 @@
     width: 100px;
     height: 40px;
 }
+.cartWrapper {
+    width: 400px;
+    position: relative;
+    top: 80px;
+    left:700px;
+    z-index: 1;
+    background: #ffff;
+    padding: 20px;
+    border: 1px solid #000;
+}
+.cartWrapper_flex {
+    display: flex;
+    justify-content: space-between;
+}
 
 .goods-list {
     display: flex;
